JavaScript Fix and more alignment cleanup

--- a/css/style.css
+++ b/css/style.css
@@ -148,69 +148,71 @@ section .active {
   vertical-align: middle;
 }
 
-
-
-/*.categorySlides {
-  width: 550px;
-  height: 500px;
-  position: relative;
-}
-
-.categorySlides img {
+.inputContainer{
+  background-color: blue;
   width: 100%;
-  height: 100%;
+  opacity: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 30px;
 }
 
-.categorySlides a {
-  width: 100%;
-  height: 100%;
-  font-size: 20px;
-  color: white;
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+input {
+  background-color: yellowgreen;
+  color: black;
 }
-
-.categorySlides a:hover {
-  font-size: 30px;
-}*/
 
 #aboutContainer {
   background-color: #f7b9aa;
-  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-content: stretch;
-  padding-bottom: 20px;
-  background-size: contain;
+  padding: 5px;
   margin: auto;
-  scroll-behavior: smooth;
 }
 
 .aboutContainerContent {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   gap: 100px;
 }
 
 p {
-  font-size: 40px;
+  background-color: white;
+  font-size: 20px;
+  padding: 15px;
+  border-radius: 5px;
 }
+
+
 
 #contactContainer {
   background-image: url("/images/skycover.PNG");
   background-position: center;
   background-repeat: no-repeat;
-  height: 450px;
+  height: 500px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding-bottom: 20px;
-  background-size: contain;
+  padding: 15px;
+  background-size: 100%;
   margin: auto;
+}
+
+.contactContainerContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactContainerContent div {
+  background-color: white;
+  width: 300px;
+  height: 200px;
 }
 
 footer {
@@ -256,26 +258,6 @@ footer {
         display: none;
     }
 
-    /*nav {
-        padding: 0px 15px;
-      }
-      
-      a {
-        color: black;
-        text-decoration: none;
-      }
-      
-      a:hover {
-        color: aqua;
-      }
-      
-      ul {
-        list-style-type: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-      }*/
-
     .galleryContainer{
         width: 80%;
     }
@@ -284,8 +266,16 @@ footer {
         width: 80%;
     }
 
+    .aboutContainerContent{
+      flex-direction: row;
+    }
     #contactContainer{
         width: 80%;
+    }
+
+    .contactContainerContent{
+      flex-direction: row;
+      gap: 200px;
     }
 
     footer{
@@ -326,4 +316,5 @@ footer {
     footer{
         width: 80%;
     }
-}
+
+  }
